# ConvertAlps

.github/workflows/: release.yml
app/: .gitignore  .tauri-signing-key.pub  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
app/backend-express/: .env.example  jest.config.ts  package-lock.json  package.json  tsconfig.json
app/backend-express/prisma/: schema.prisma
app/backend-express/src/: server.ts  workerEntry.ts
app/backend-express/src/database/: prismaClient.ts
app/backend-express/src/middleware/: auditLog.middleware.ts  errorHandler.middleware.ts
app/backend-express/src/queue/: jobQueue.ts
app/backend-express/src/routes/: afr.routes.ts  estimator.routes.ts  fao.routes.ts  ingestion.routes.ts  jobQueue.routes.ts  postprocessor.routes.ts  project.routes.ts  settings.routes.ts  (+1 more)
app/backend-express/tests/: api.integration.test.ts  tooling.service.test.ts
app/src/: App.tsx  index.css  main.tsx  test-setup.ts
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src/__tests__/: stores.test.ts
app/src/api/: backendApi.ts
app/src/hooks/: useKeyboardShortcuts.ts
app/src/layouts/: MainLayout.tsx
app/src/pages/: AppSettingsPage.tsx  Module1_Ingestion.tsx  Module2_AFR.tsx  Module3_Tooling.tsx  Module4_FAO.tsx  Module5_PostProcessor.tsx  Module6_Estimator.tsx  ProjectsPage.tsx  SettingsPage.tsx
app/src/store/: useAppSettingsStore.ts  useAppStore.ts  useJobStore.ts  useSettingsStore.ts
app/src/types/: index.ts
(+27 files in other folders)
