[package]
name = "convertalps"
version = "0.1.0"
description = "ConvertAlps — Logiciel FAO Industriel Intégré"
authors = ["ConvertAlps"]
edition = "2021"

[lib]
name = "convertalps_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                     = { version = "2", features = ["devtools"] }
tauri-plugin-opener       = "2"
tauri-plugin-shell        = "2"
tauri-plugin-dialog       = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater      = "2"
tauri-plugin-process      = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
# Chiffrement local AES-256-GCM (données sensibles atelier)
aes-gcm           = "0.10"
base64            = "0.22"
# Gestion des erreurs
thiserror         = "1"
# Épinglage forcé : cookie-0.18.x incompatible avec time>=0.3.37 (Parsable::parse API break)
time              = ">=0.3.0, <0.3.37"

